[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/Dialogs/ExportDialog.gd" type="Script" id=1]
[ext_resource path="res://src/UI/TransparentChecker.tscn" type="PackedScene" id=2]

[node name="ExportDialog" type="ConfirmationDialog"]
margin_right = 532.0
margin_bottom = 530.0
rect_min_size = Vector2( 456, 530 )
window_title = "Export..."
resizable = true
dialog_hide_on_ok = false
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 524.0
margin_bottom = 494.0
rect_min_size = Vector2( 330, 0 )
size_flags_vertical = 3

[node name="Tabs" type="Tabs" parent="VBoxContainer"]
margin_right = 516.0
margin_bottom = 24.0
size_flags_vertical = 0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 516.0
margin_bottom = 32.0

[node name="PreviewLabel" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 516.0
margin_bottom = 50.0
text = "Preview:"

[node name="PreviewPanel" type="Panel" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 516.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TransparentChecker" parent="VBoxContainer/PreviewPanel" instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="PreviewScroll" type="ScrollContainer" parent="VBoxContainer/PreviewPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previews" type="GridContainer" parent="VBoxContainer/PreviewPanel/PreviewScroll"]
margin_right = 516.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 516.0
margin_bottom = 422.0
columns = 2

[node name="OrientationLabel" type="Label" parent="VBoxContainer/GridContainer" groups=["SpritesheetOptions"]]
margin_top = 3.0
margin_right = 259.0
margin_bottom = 17.0
text = "Orientation:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Orientation" type="OptionButton" parent="VBoxContainer/GridContainer" groups=["SpritesheetOptions"]]
margin_left = 263.0
margin_right = 516.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Rows"
items = [ "Rows", null, false, 0, null, "Columns", null, false, 1, null ]
selected = 0

[node name="LinesCountLabel" type="Label" parent="VBoxContainer/GridContainer" groups=["SpritesheetOptions"]]
margin_top = 29.0
margin_right = 259.0
margin_bottom = 43.0
text = "Columns:"

[node name="LinesCount" type="SpinBox" parent="VBoxContainer/GridContainer" groups=["SpritesheetOptions"]]
margin_left = 263.0
margin_top = 24.0
margin_right = 516.0
margin_bottom = 48.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 1.0

[node name="FramesLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 55.0
margin_right = 259.0
margin_bottom = 69.0
size_flags_horizontal = 3
text = "Frames:"

[node name="Frames" type="OptionButton" parent="VBoxContainer/GridContainer"]
margin_left = 263.0
margin_top = 52.0
margin_right = 516.0
margin_bottom = 72.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "All frames"
items = [ "All frames", null, false, 0, null, "Selected frames", null, false, 1, null ]
selected = 0

[node name="LayersLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 79.0
margin_right = 259.0
margin_bottom = 93.0
text = "Layers:"

[node name="Layers" type="OptionButton" parent="VBoxContainer/GridContainer"]
margin_left = 263.0
margin_top = 76.0
margin_right = 516.0
margin_bottom = 96.0
mouse_default_cursor_shape = 2
text = "Visible layers"
items = [ "Visible layers", null, false, 0, null, "Selected layers", null, false, 1, null ]
selected = 0

[node name="DirectionLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 103.0
margin_right = 259.0
margin_bottom = 117.0
text = "Animation direction:"

[node name="Direction" type="OptionButton" parent="VBoxContainer/GridContainer"]
margin_left = 263.0
margin_top = 100.0
margin_right = 516.0
margin_bottom = 120.0
rect_min_size = Vector2( 100, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Forward"
items = [ "Forward", null, false, 0, null, "Backwards", null, false, 1, null, "Ping-Pong", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResizeLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 129.0
margin_right = 259.0
margin_bottom = 143.0
rect_min_size = Vector2( 30, 0 )
text = "Resize:"

[node name="Resize" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 263.0
margin_top = 124.0
margin_right = 516.0
margin_bottom = 148.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
min_value = 50.0
max_value = 1000.0
step = 100.0
value = 100.0
suffix = "%"

[node name="InterpolationLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 155.0
margin_right = 259.0
margin_bottom = 169.0
rect_min_size = Vector2( 30, 0 )
text = "Interpolation:"

[node name="Interpolation" type="OptionButton" parent="VBoxContainer/GridContainer"]
margin_left = 263.0
margin_top = 152.0
margin_right = 516.0
margin_bottom = 172.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Nearest"
items = [ "Nearest", null, false, 0, null, "Bilinear", null, false, 1, null, "Cubic", null, false, 2, null, "Trilinear", null, false, 3, null, "Lanczos", null, false, 4, null ]
selected = 0

[node name="DimensionLabelText" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 176.0
margin_right = 259.0
margin_bottom = 190.0
size_flags_horizontal = 3
text = "Export dimensions:"

[node name="DimensionLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 263.0
margin_top = 176.0
margin_right = 516.0
margin_bottom = 190.0
size_flags_horizontal = 3
text = "64Ã—64"

[node name="MultipleAnimationsDirectories" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_top = 194.0
margin_right = 259.0
margin_bottom = 218.0
hint_tooltip = "Creates multiple files but every file is stored in different folder that corresponds to its frame tag"
mouse_default_cursor_shape = 2
text = "Create new folder for each frame tag"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 426.0
margin_right = 516.0
margin_bottom = 430.0

[node name="FilePath" type="GridContainer" parent="VBoxContainer"]
margin_top = 434.0
margin_right = 516.0
margin_bottom = 486.0
columns = 3

[node name="Label" type="Label" parent="VBoxContainer/FilePath" groups=["NotHTML5"]]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 0 )
text = "Path:"

[node name="PathLineEdit" type="LineEdit" parent="VBoxContainer/FilePath" groups=["NotHTML5"]]
margin_left = 36.0
margin_right = 382.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="PathButton" type="Button" parent="VBoxContainer/FilePath" groups=["NotHTML5"]]
margin_left = 386.0
margin_right = 516.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
text = "Browse"

[node name="Label2" type="Label" parent="VBoxContainer/FilePath"]
margin_top = 33.0
margin_right = 32.0
margin_bottom = 47.0
rect_min_size = Vector2( 30, 0 )
text = "File:"

[node name="FileLineEdit" type="LineEdit" parent="VBoxContainer/FilePath"]
margin_left = 36.0
margin_top = 28.0
margin_right = 382.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "untitled"
align = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="FileFormat" type="OptionButton" parent="VBoxContainer/FilePath"]
margin_left = 386.0
margin_top = 28.0
margin_right = 516.0
margin_bottom = 52.0
rect_min_size = Vector2( 130, 0 )
mouse_default_cursor_shape = 2

[node name="Popups" type="Node" parent="."]

[node name="PathDialog" type="FileDialog" parent="Popups"]
margin_left = 8.0
margin_top = 8.0
margin_right = 448.0
margin_bottom = 494.0
rect_min_size = Vector2( 440, 300 )
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2
show_hidden_files = true

[node name="PathValidationAlert" type="AcceptDialog" parent="Popups"]
margin_left = 8.0
margin_top = 180.0
margin_right = 448.0
margin_bottom = 280.0
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Alarm!"
resizable = true
dialog_text = "Directory path and file name are not valid!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileExistsAlert" type="AcceptDialog" parent="Popups"]
margin_left = 10.5227
margin_top = 176.636
margin_right = 450.523
margin_bottom = 276.636
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Alarm!"
resizable = true
dialog_text = "File %s already exists. Overwrite?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportProgressBar" type="WindowDialog" parent="Popups"]
margin_left = 63.0
margin_top = 215.0
margin_right = 402.0
margin_bottom = 256.0
popup_exclusive = true
window_title = "Exporting in progress..."
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Popups/ExportProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Popups/ExportProgressBar/MarginContainer"]
margin_right = 329.0
margin_bottom = 14.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameTimer" type="Timer" parent="."]
__meta__ = {
"_editor_description_": "Timer to advance animation frames in animation preview."
}

[connection signal="about_to_show" from="." to="." method="_on_ExportDialog_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_ExportDialog_confirmed"]
[connection signal="popup_hide" from="." to="." method="_on_ExportDialog_popup_hide"]
[connection signal="tab_clicked" from="VBoxContainer/Tabs" to="." method="_on_Tabs_tab_clicked"]
[connection signal="item_selected" from="VBoxContainer/GridContainer/Orientation" to="." method="_on_Orientation_item_selected"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/LinesCount" to="." method="_on_LinesCount_value_changed"]
[connection signal="item_selected" from="VBoxContainer/GridContainer/Frames" to="." method="_on_Frames_item_selected"]
[connection signal="item_selected" from="VBoxContainer/GridContainer/Layers" to="." method="_on_Layers_item_selected"]
[connection signal="item_selected" from="VBoxContainer/GridContainer/Direction" to="." method="_on_Direction_item_selected"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Resize" to="." method="_on_Resize_value_changed"]
[connection signal="item_selected" from="VBoxContainer/GridContainer/Interpolation" to="." method="_on_Interpolation_item_selected"]
[connection signal="toggled" from="VBoxContainer/GridContainer/MultipleAnimationsDirectories" to="." method="_on_MultipleAnimationsDirectories_toggled"]
[connection signal="text_changed" from="VBoxContainer/FilePath/PathLineEdit" to="." method="_on_PathLineEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/FilePath/PathButton" to="." method="_on_PathButton_pressed"]
[connection signal="text_changed" from="VBoxContainer/FilePath/FileLineEdit" to="." method="_on_FileLineEdit_text_changed"]
[connection signal="item_selected" from="VBoxContainer/FilePath/FileFormat" to="." method="_on_FileFormat_item_selected"]
[connection signal="dir_selected" from="Popups/PathDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="confirmed" from="Popups/FileExistsAlert" to="." method="_on_FileExistsAlert_confirmed"]
[connection signal="custom_action" from="Popups/FileExistsAlert" to="." method="_on_FileExistsAlert_custom_action"]
[connection signal="timeout" from="FrameTimer" to="." method="_on_FrameTimer_timeout"]
